<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/opaque_black" >

    <TextView 
        android:id="@+id/car_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_picker_title" 
        android:textSize="22sp"
        android:textColor="#DDDDDD"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>
    
    
    <Button
        android:id="@+id/button_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/car_picker_title"
        android:background="@drawable/button_main_background" 
        android:text="@string/year"/>

    <Button
        android:id="@+id/button_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_year"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_main_background" 
        android:text="@string/make"/>

    <Button
        android:id="@+id/button_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_make"
        android:layout_margin="10dp"
        android:background="@drawable/button_main_background"
        android:text="@string/model" />

    <LinearLayout
        android:id="@+id/LinearLayoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_model"
        android:layout_marginBottom="10dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/button_cancel_car_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           	android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_main_background"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_ok_car_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_main_background"
            android:text="@string/ok" />
    </LinearLayout>

</RelativeLayout>