<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/opaque_black" >
    
    
    <TextView 
        android:id="@+id/title_fuelguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuel_remaining"
        android:textColor="@color/text_silver"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"/>
    
    <SeekBar 
        android:id="@+id/seekbar_fuel_guage"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:maxHeight="100dp"
        android:progress="16"
        android:max="16"
        android:progressDrawable="@drawable/progressbar_fuel" 
        android:thumb="@drawable/thumb_fuel"
        android:thumbOffset="0dp"
        android:layout_below="@+id/text_fuel_gauge"/>
    
    <TextView android:id="@+id/text_fuel_gauge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:layout_below="@+id/title_fuelguage"
        android:textColor="@color/text_silver"/>
    
    <LinearLayout
        android:id="@+id/LinearLayoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekbar_fuel_guage"
        android:layout_marginTop="7dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/button_cancel_fuel_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_slider"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel" 
            android:textColor="@color/text_silver"/>

        <Button
            android:id="@+id/button_ok_car_fuel_reading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/button_slider"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/ok"
            android:textColor="@color/text_silver" />
    </LinearLayout>
    

</RelativeLayout>
